# actix-ratelimit

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs  middleware.rs  timers.rs
src/stores/: memcached.rs  memory.rs  mod.rs  redis.rs
tests/: version-numbers.rs
