[package]
name = "actix-ratelimit"
version = "0.3.1"
authors = ["Hitesh Paul <git@hiteshpaul.com>"]
edition = "2018"
description = "Rate limiting middleware framework for actix-web"
homepage = "https://github.com/TerminalWitchcraft/actix-ratelimit"
repository = "https://github.com/TerminalWitchcraft/actix-ratelimit"
readme = "./README.md"
keywords = ["actix", "actix-web", "ratelimit", "middleware", "rate-limiting"]
categories = ["web-programming::http-server", "web-programming", "asynchronous", "caching", "web-programming::http-client"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "TerminalWitchcraft/actix-ratelimit", branch = "master" }

[features]

default = ["memory", "redis-store", "memcached"]
memory = ["dashmap"]
redis-store = ["redis_rs", "backoff"]
memcached = ["r2d2-memcache", "backoff"]

[dependencies]
log = "0.4.14"
actix-web = {version = "4.0.0-beta.20"}
actix-http = {version = "3.0.0-beta.18"}
actix = "0.12.0"
futures = "0.3.8"
failure = "0.1.8"

dashmap = {version = "5.0.0", optional = true}

redis_rs = {version = "0.21.5", optional = true,features = ["aio","tokio-comp"], package= "redis"}
backoff = {version = "0.4.0", optional = true}
r2d2-memcache = { version = "0.6", optional = true }

[dev-dependencies]
actix-rt = "2.6.0"
env_logger = "0.9.0"
version-sync = "0.9.4"
